<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="170dp"
            android:layout_height="220dp"
            android:layout_marginTop="25dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="25sp"
            android:textColor="#f72a21"
            android:textStyle="bold"
            tools:text="@string/heroes_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/deskripsi"
            android:textColor="#1692FF"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="7"
            android:textSize="15sp"
            tools:text="@string/description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/penjualan"
            android:textColor="#1692FF"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_item_penjualan"
            android:layout_width="match_parent"
            android:maxLines="7"
            android:layout_height="113dp"
            android:text="@string/penjualan_film" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/rating"
            android:textColor="#1692FF"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_item_rating"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:maxLines="7"
            android:text="@string/rating" />

        <Button
            android:id="@+id/tv_btn_share"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white"
            android:text="@string/share" />
    </LinearLayout>
</ScrollView>
